[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rvc-python"
version = "0.1.5"
authors = [
  { name="onxlmao", email="" },
]
description = "Use RVC via console or python scripts"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
only-include = ["rvc_python"]

[tool.hatch.build.hooks.requirements]
filename = "requirements.txt"
