[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rvc-python"
version = "0.2.0"
authors = [
  { name="onxlmao", email="" },
]
description = "Use RVC via console or python scripts"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pip>=23.3",
    "wheel",
    "onnxruntime; sys_platform == 'darwin'",
    "onnxruntime-gpu; sys_platform != 'darwin'",
    "PyYAML>=6.0",
    "tiktoken",
    "hyperpyyaml",
    "torch>=2.3.1",
    "tqdm>=4.63.1",
    "sortedcontainers",
    "torchvision>=0.18.1",
    "torchaudio>=2.3.1",
    "torchcodec>=0.8.1",
    "faiss-cpu>=1.8.0",
    "transformers>=4.49.0",
    "scikit-learn",
    "einops>=0.8.0",
    "fairseq @ git+https://github.com/fumiama/fairseq.git",
    "librosa>=0.10.2",
    "pydub>=0.25.1",
    "praat-parselmouth",
    "soundfile>=0.13.0",
    "pedalboard",
    "numpy>=1.26.4",
    "numba>=0.60.0",
    "scipy>=1.14.0",
    "matplotlib>=3.7.2",
    "gradio>=5.23.3",
    "requests>=2.32.3",
    "aiohttp",
    "pysrt",
    "yt-dlp>=2026.03.17",
    "edge-tts>=7.2.7",
    "ffmpy==0.3.1",
    "ffmpeg-python>=0.2.0",
    "beautifulsoup4",
    "tensorboard",
    "onnx>=1.14",
    "onnxslim",
    "onnx2torch>=1.5.15",
    "pycryptodome>=3.9.6,<4.0.0",
    # Pitch extraction
    "pyworld>=0.3.4",
    "torchcrepe>=0.0.24",
    # Audio I/O
    "av>=12.0.0",
    # API server
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "loguru>=0.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
only-include = ["rvc_python"]
